# geisinger-echo-mortality

./: LICENSE  Makefile  README.md
container/: Dockerfile  pyproject.toml
models/ap4/: model.h5  model.json
source/: main.py
