[tool.poetry]
name = "geisinger-echo-mortality"
version = "12Oct2020"
description = ""
authors = ["aeulloacerna <aeulloacerna@geisinger.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
disiml = {git = "https://gitlab.com/alvarouc/disiml.git", branch = "master"}
opencv-python = "^4.1"
seaborn = "^0.9.0"
statsmodels = "^0.10.2"
xgboost = "^0.90.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
